first iteration, add box-sizing:border box to all elements, add .content and .arrow elements with some working properties.

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+*, *:before, *:after {
+  box-sizing: border-box;
+}
 body {
   background-color: #333;
   font-family: sans-serif;
@@ -14,8 +17,37 @@ nav {
   padding: 10px 0 15px 15px;
   position: fixed;
   width: 420px;
+  background-color: #000;
 }
 
 .restaurant-list {
   padding-top: 50px;
+  display:block;
+  width: 100%;
+  background-color: #000;
+}
+
+.content {
+  background-color: #EEE;
+  width: 85%;
+  padding: 3% 5%;
+  float: left;
+  border-bottom: 1px black solid;
+}
+
+.arrow{
+  /*border: 1px black solid;*/
+  background-color: #EEE;
+  width: 15%;
+  padding: 0% 2%;
+  float: left;
+  border-bottom: 1px black solid;
+}
+
+.content h1{
+  font-size: 2em;
+  line-height: 1.5em;
+}
+.content h3{
+  font-size: 1.3em;
 }
